# oss-uploader

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
