[package]
name = "oss-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.9", features = ["v4"] }
bytes = "1.6"
urlencoding = "2.1"
console = "0.15"
indicatif = "0.17"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
strip = true

# 添加所有平台的二进制文件
[[bin]]
name = "oss-uploader"
path = "src/main.rs"
